# AETHER

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  aether.toml  pyproject.toml
crates/aether-acq/: Cargo.toml
crates/aether-acq/src/: lib.rs
crates/aether-cli/: Cargo.toml
crates/aether-cli/src/: main.rs
crates/aether-core/: Cargo.toml
crates/aether-core/src/: compatibility.rs  config.rs  experiment.rs  knowledge.rs  lib.rs  material.rs  physics.rs
crates/aether-db/: Cargo.toml
crates/aether-db/src/: experiments.rs  knowledge.rs  lib.rs  library.rs  materials.rs  schema.rs
crates/aether-ffi/: Cargo.toml
crates/aether-ffi/src/: lib.rs
crates/aether-gui/: Cargo.toml
crates/aether-gui/src/: lib.rs  main.rs
data/: .gitkeep
data/materials/: .gitkeep  library.json
docs/: ADR-0001-aether-hardening.md  ADR-0002-extract-annealing-spine.md
docs/adr/: ADR-0001-inverse-design.md
research/: __init__.py
research/active_matter/: __init__.py  kuramoto.py  kuramoto_viz.py  phase_diagram.py  phase_viz.py  swarm_assembly.py  swarm_viz.py  vicsek.py  viz.py
research/cellular_automata/: __init__.py  game_of_life.py  life_viz.py  wolfram.py  wolfram_viz.py
research/compatibility/: __init__.py  metrics.py  scorer.py  subjective.py
research/criticality/: __init__.py  ising2d.py  ising2d_gpu.py  ising2d_gpu_viz.py  ising2d_viz.py  percolation.py  percolation_viz.py  universal.py  viz.py
research/daemons/: __init__.py  szilard.py  viz.py
research/electronic_structure/: __init__.py  anderson.py  anderson_gpu.py  anderson_gpu_viz.py  anderson_viz.py  graphene.py  haldane.py  haldane_viz.py  hbn.py  hbn_viz.py  kane_mele.py  kane_mele_viz.py  large_tb.py  schrodinger.py  schrodinger_viz.py  ssh.py  tight_binding.py
research/em_simulation/: __init__.py  metamaterial.py  photonic_crystal.py  photonic_crystal_viz.py  resonance.py  wave_prop.py
research/fractals/: __init__.py  box_counting.py  fractal_viz.py
research/inverse_design/: __init__.py  degeneracy.py  degeneracy_viz.py  inverse_auxetic.py  inverse_hbn.py  inverse_photonic.py  inverse_photonic_viz.py  inverse_ssh.py
research/knowledge/: __init__.py  correlator.py  learner.py
research/metamaterials/: __init__.py  auxetic.py  viz.py
research/networks/: __init__.py  small_world.py  small_world_viz.py
research/neuro/: __init__.py  hopfield.py  hopfield_viz.py
research/phonons/: __init__.py  heat_capacity.py  heat_capacity_viz.py  phonon_chain.py  phonon_viz.py
research/programmable_matter/: __init__.py  reconfigure.py  viz.py
research/quantum_annealing/: __init__.py  annealer.py  optimizer.py  qubo.py
research/reaction_diffusion/: __init__.py  gray_scott.py  gray_scott_gpu.py  gray_scott_gpu_viz.py  gray_scott_viz.py
research/reservoir_computing/: __init__.py  esn.py  material_rc.py  narma.py  narma_viz.py
research/stochastic/: __init__.py  brownian.py  brownian_viz.py
tests/python/: test_anderson.py  test_anderson_gpu.py  test_annealer.py  test_auxetic.py  test_box_counting.py  test_brownian.py  test_degeneracy.py  test_esn.py  test_fdtd_validation.py  test_game_of_life.py  test_graphene_tb.py  test_gray_scott.py  test_gray_scott_gpu.py  test_haldane.py  test_hbn.py  test_heat_capacity.py  test_hopfield.py  test_inverse_auxetic.py  test_inverse_hbn.py  test_inverse_photonic.py  test_inverse_ssh.py  test_ising2d.py  test_ising2d_gpu.py  test_kane_mele.py  test_kuramoto.py  test_large_tb.py  test_narma.py  test_percolation.py  test_phonon_chain.py  test_photonic_crystal.py  test_programmable_matter.py  test_schrodinger.py  test_small_world.py  test_ssh.py  test_ssh_winding.py  test_swarm_assembly.py  test_szilard.py  test_tight_binding.py  test_universal_criticality.py  test_vicsek.py  (+2 more)
