[workspace]
members = [
    "crates/aether-core",
    "crates/aether-db",
    "crates/aether-acq",
    "crates/aether-ffi",
    "crates/aether-cli",
    "crates/aether-gui",
]
resolver = "2"

[workspace.dependencies]
tokio              = { version = "1",    features = ["full"] }
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"
anyhow             = "1"
thiserror          = "1"
rusqlite           = { version = "0.31", features = ["bundled"] }
pyo3               = { version = "0.21", features = ["auto-initialize"] }
eframe             = { version = "0.27", features = ["wgpu"] }
egui_plot          = "0.27"
chrono             = { version = "0.4",  features = ["serde"] }
uuid               = { version = "1",    features = ["v4", "serde"] }
clap               = { version = "4",    features = ["derive"] }
toml               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3",  features = ["env-filter"] }
num-complex        = { version = "0.4",  features = ["serde"] }
bytemuck           = { version = "1",    features = ["derive"] }
