[project]
name = "aether-research"
version = "0.1.0"
description = "AETHER LAB — Advanced Materials Research Engine (Python Research Layer)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "openjij>=0.9",
    "reservoirpy>=0.4",
    "pymoo>=0.6",
    "pymatgen>=2024.1",
    "scikit-learn>=1.3",
    "torch>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
dwave = ["dwave-ocean-sdk>=6.0"]
em = ["gprMax>=3.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
