[package]
name = "aether-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
num-complex = { workspace = true }
