[package]
name = "aether-db"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
uuid       = { workspace = true }
tracing    = { workspace = true }
aether-core = { path = "../aether-core" }
