[package]
name = "aether-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3       = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
aether-core = { path = "../aether-core" }
aether-db   = { path = "../aether-db" }
